# naramarketmcp_jk

./: CLAUDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  GEMINI.md  LICENSE  PROJECT_UPGRADE_REPORT.md  README.md  README_BEGINNER.md  README_new.md  SMITHERY_DEPLOYMENT.md  UPGRADE_COMPLETE.md  app.py  build-docker.sh  claude_desktop_config.json  deploy.sh  index.py  mcp_bridge.py  openapi.yaml  pyproject.toml  render.yaml  requirements.txt  smithery.yaml  start_render.py  test-api.sh  test-complete.sh  test-cors.sh  test-docker.sh  test_crawl_list.json  test_server_info.json  vercel.json
api/: index.py  main.py
deployments/: deploy.sh  docker-compose.yml
deployments/nginx/: nginx.conf
src/: main.py
src/api/: app.py  auth_routes.py  routes.py
src/core/: async_client.py  client.py  config.py  cors_middleware.py  enhanced_client.py  fastmcp_cors_patch.py  models.py  smithery_middleware.py  utils.py
src/services/: async_crawler.py  auth.py  crawler.py  file_processor.py
src/tools/: base.py  enhanced_tools.py  naramarket.py  openapi_tools.py
tests/: test_api.py  test_auth.py  test_health.py  test_utils.py
