[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naramarket-mcp"
version = "0.1.0"
description = "Nara Market (G2B) FastMCP 2.0 server with OpenAPI integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "NaraMarket MCP Team", email = "ss929698@gmail.com"}
]
keywords = ["mcp", "nara", "g2b", "crawler", "open-data", "fastmcp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "fastmcp>=2.12.3",
  "requests>=2.31.0,<2.33.0",
  "python-dotenv>=1.0.0,<1.1.0",
  "pandas>=2.0.0,<2.3.0",
  "uvicorn>=0.29.0,<0.33.0",
  "starlette>=0.37.0,<0.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "mypy>=1.10.0,<1.11.0",
  "types-requests>=2.31.0,<2.32.0",
]
sse = [
  "starlette>=0.37.0,<0.40.0",
  "uvicorn>=0.29.0,<0.33.0",
]

[project.scripts]
naramarket-mcp = "src.main:main"

[tool.setuptools]
packages = ["src"]
